# hpc-end

./: .dockerignore  .gitignore  .gitmodules  =3.0  CONTRIBUTING.md  README.md  pyproject.toml  runSofa.ini
.github/ISSUE_TEMPLATE/: -coding-task-issue-template.md  documentation-issue-template.md  experiment-issue-template.md  meeting-issue-template.md  research-issue-template.md  writing-issue-template.md
data/: __init__.py
data/Device1/: tool.py  tool_definition.json
data/Test/: tool.py  tool_definition.json
data/TestModel_MultiSection/: model_definition.json
data/TestModel_StandardJ035/: __init__.py  model_definition.json
data/UniversalII_Abbott/: __init__.py  model_definition.json
data/anatomy_registry/: index.json
data/wire_registry/: README.md  __init__.py  archvar_inventory_manifest.json  archvar_migration_manifest.json  bootstrap.py  index.json  store.py  types.py
debug/: __init__.py
debug/force_playground/: README.md  __init__.py  cli.py  config.py  constraint_audit.py  controllers.py  eval_scene_step_debug.py  eval_v2_plain_wall_press.py  eval_v2_runner_force_trace.py  io.py  maintainer_example_exac-scene.scn  maintainer_example_exact.py  maintainer_style_check.py  maintainer_wire_simple.py  monitor_wall_press_inspection.py  oracle.py  plotting.py  report.py  scene_factory.py  scene_structure_inspector.py  simple_contact_forces.py  single_jwire_basic_scene.py  single_jwire_tip_force_debug.py  single_wire_plane_wall.py  telemetry.py  viewer.py  wire_vesseltree_scratch.py
dev/gw_tool_recommender/: main.py  storage.py
dev/tool_compare/: main.py
docker/: Dockerfile  README.md
docs/: README.md  anatomy_dataset.md  architecture.md  archvar_to_wire_registry_migration.md  compare_all_connected_agents.yml  compare_archvar_jshaped_dual.yml  compare_archvar_visual_4wires_single.yml  compare_archvar_visual_all.yml  compare_archvar_visual_friction_high.yml  compare_archvar_visual_friction_low.yml  compare_example.yml  compare_hq_shared_variants.yml  compare_hq_validated_smoke.yml  compare_standardj035_visual_4wires_single.yml  compare_wire_registry_attached_best.yml  compare_wire_registry_visual_smoke.yml  eval_archvar_jshaped_default.yml  eval_archvar_jshaped_straighttip.yml  eval_example.yml  eval_hq_validated_smoke.yml  eval_hq_validated_smoke_thirdparty.yml  eval_quick_force_test.yml  evaluation_pipeline.md  evaluation_pipeline_explained.md  force_normal_vs_magnitude.md  manifest_superstiff_all_checkpoints.json  terumo_workhorse_procedural_prompt.md  training_comparison_pipeline.md  training_pipeline.md  wall_force_validated_workflow.md
examples/: README.md  generate_anatomy_dataset.py  play_agent.py  run_evaluation.py  train_paper.py
experiments/: README.md  __init__.py
experiments/harry_method_comparison/: __init__.py  harry_collision_monitor.py  run_mass_sweep.py
experiments/master-thesis/: generate_e1_jobs.py  master-thesis.ipynb  run_e0_experiment.py  run_e0_experiment.sh  run_e1_cell.py
native/sofa_wire_force_monitor/: CMakeLists.txt
native/sofa_wire_force_monitor/include/SofaWireForceMonitor/: WireWallContactExport.h  WireWallForceMonitor.h  config.h
native/sofa_wire_force_monitor/src/: WireWallContactExport.cpp  WireWallForceMonitor.cpp  initSofaWireForceMonitor.cpp
notebooks/: README.md
scripts/: archvar_resume_test_runner.py  archvar_smoke.py  archvar_train_tool.py  archvar_train_tool_resume.py  build_checkpoint_eval_manifest.py  build_hpc_dashboard.py  build_wall_force_monitor.sh  check_simple_tools_vs_registry.py  compare_archvar_history.py  e0_chunks.tinygpu.sbatch  e1_analyze_manifest.py  e1_generate_validate.py  e1_partition_probe.py  e1_work.sbatch  estimate_archvar_eta.py  eval_checkpoint_manifest.py  export_archvar_history.py  fill_wire_registry.py  hpc_bulk_capture.sh  hpc_capture_run.sh  inspect_resume_checkpoint.py  migrate_archvar_to_wire_registry.py  monitor_paper.sh  plot_eval_wall_force_heatmaps.py  promote_backlog_wire.py  pull_hpc_runs.sh  queue_archvar_tight_j_full.sh  sample_e1_anatomies.py  sofa_env.sh  sofa_step_probe.py  tail_hpc_trainings.py  train_paper.sh  view_eval_wall_force_heatmap_interactive.py
scripts/save_resume_runs/: archvar_resume_amplatz_stronghook_a100x1_nw24.sbatch  archvar_resume_amplatz_tightj_a100x1_nw24.sbatch  archvar_resume_steve_gentle_a100x1_nw24.sbatch  archvar_resume_steve_standardj_a100x2_nw40.sbatch  archvar_resume_steve_stronghook_a100x2_nw40.sbatch
steve_recommender/: __init__.py  main.py  steve_adapter.py  storage.py
steve_recommender/adapters/: __init__.py
steve_recommender/analysis/: __init__.py  training_history.py
steve_recommender/anatomy/: __init__.py  aortic_arch_dataset.py  generate_aortic_arch_dataset.py
steve_recommender/aorticarch_dir/: __init__.py  generate.py
steve_recommender/bench/: __init__.py  archvar_builder.py  archvar_tools.py  custom_tools_amplatz_gentle_simple.py  custom_tools_amplatz_straight_simple.py  custom_tools_amplatz_strong_hook_simple.py  custom_tools_amplatz_tight_j_simple.py  custom_tools_steve_gentle_simple.py  straight_eps.py  (+7 more)
tests/: test_comparison_cli.py  test_comparison_resolver.py  test_eval_stochastic_mode.py  test_eval_v2_monitor_diagnostic.py  test_eval_v2_wall_press_runtime.py  test_force_extraction_config_and_scoring.py  test_force_monitor_runtime.py  test_force_playground_core.py  test_paper_agent_resume.py  test_resume_checkpointing.py  test_torch_checkpoint_compat.py  test_wall_force_mapping.py
tools/: diagnose_force_normal_sign.py  diagnose_live_row_mapping.py  diagnose_trace_triangle_mapping.py  recon_phase_f.py
(+412 files in other folders)
