[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steve-recommender"
version = "0.1.0"
description = "Guidewire tool recommender built on stEVE."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "eve @ git+https://github.com/lkarstensen/stEVE.git@041e607ea1f866ee47d7950376f1da2d10fc2397",
    "eve_rl @ git+https://github.com/lkarstensen/stEVE_rl.git@64222b7b74d113a6e965b58d5739b475f2c87a02",
    "numpy",
    "PyYAML",
    "PyQt5",
    "torch",
]

[project.scripts]
steve-eval = "steve_recommender.evaluation.run_cli:main"
steve-train = "steve_recommender.rl.train_paper_arch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["steve_recommender*"]

[tool.setuptools.package-data]
steve_recommender = [
    "aorticarch_dir/vesseltrees/**/description.json",
    "aorticarch_dir/vesseltrees/**/mesh/*",
]
